@@ -10,6 +10,7 @@ package org.sosy_lab.java_smt.basicimpl;
 
 import static java.lang.Long.parseLong;
 
+import com.google.common.collect.ImmutableList;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.List;
@@ -24,7 +25,7 @@ public class BitvectorGenerator {
   private BitvectorGenerator() {}
 
   protected static void logMakeBitVector(Object result, int length, BigInteger i) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, i));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, i));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(Long.toString(length));
     inputParams.add(i.toString());
@@ -42,7 +43,7 @@ public class BitvectorGenerator {
   }
 
   protected static void logMakeBitVector(BitvectorFormula result, int length, IntegerFormula pI) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pI));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pI));
     // TODO We need to convert the integer formula to bitvector. It doesn't have to be a constant.
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(Long.toString(length));
@@ -62,7 +63,7 @@ public class BitvectorGenerator {
 
   protected static void logMakeBitVecVariable(
       BitvectorFormula result, BitvectorType pType, String pVar) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pType, pVar));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pType, pVar));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pVar);
     Function<List<Object>, String> functionToString =
@@ -74,7 +75,7 @@ public class BitvectorGenerator {
   }
 
   protected static void logMakeBitVecVariable(BitvectorFormula result, int pLength, String pVar) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pVar));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pVar));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pVar);
     Function<List<Object>, String> functionToString =
@@ -87,7 +88,7 @@ public class BitvectorGenerator {
 
   protected static void logBVEqual(
       Object result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -99,7 +100,7 @@ public class BitvectorGenerator {
   }
 
   protected static void logBVNegate(Object result, BitvectorFormula pNumber) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     Function<List<Object>, String> functionToString =
@@ -110,7 +111,7 @@ public class BitvectorGenerator {
 
   protected static void logBVAdd(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -123,7 +124,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSub(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -136,7 +137,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSDivide(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -149,7 +150,7 @@ public class BitvectorGenerator {
 
   protected static void logBVUDivide(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -162,7 +163,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSignedRemainder(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -175,7 +176,7 @@ public class BitvectorGenerator {
 
   protected static void logBVUnsignedRemainder(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -188,7 +189,7 @@ public class BitvectorGenerator {
 
   protected static void logBVMultiply(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -201,7 +202,7 @@ public class BitvectorGenerator {
 
   protected static void logBVUGreaterThan(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -214,7 +215,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSGreaterThan(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -227,7 +228,7 @@ public class BitvectorGenerator {
 
   protected static void logBVUGreaterOrEqual(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -240,7 +241,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSGreaterOrEqual(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -253,7 +254,7 @@ public class BitvectorGenerator {
 
   protected static void logBVULessThan(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -266,7 +267,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSLessThan(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -279,7 +280,7 @@ public class BitvectorGenerator {
 
   protected static void logBVULessOrEqual(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -292,7 +293,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSLessOrEqual(
       BooleanFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -304,7 +305,7 @@ public class BitvectorGenerator {
   }
 
   protected static void logBVNot(Object result, BitvectorFormula pNumber) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     Function<List<Object>, String> saveResult =
@@ -315,7 +316,7 @@ public class BitvectorGenerator {
 
   protected static void logBVAnd(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -328,7 +329,7 @@ public class BitvectorGenerator {
 
   protected static void logBVOr(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -341,7 +342,7 @@ public class BitvectorGenerator {
 
   protected static void logBVXor(
       BitvectorFormula result, BitvectorFormula pNumber1, BitvectorFormula pNumber2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber1, pNumber2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber1, pNumber2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber1);
     inputParams.add(pNumber2);
@@ -354,7 +355,7 @@ public class BitvectorGenerator {
 
   protected static void logBVSShiftRight(
       BitvectorFormula result, BitvectorFormula pNumber, BitvectorFormula toShift) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber, toShift));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber, toShift));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(toShift);
@@ -367,7 +368,7 @@ public class BitvectorGenerator {
 
   protected static void logBVUShiftRight(
       BitvectorFormula result, BitvectorFormula pNumber, BitvectorFormula toShift) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber, toShift));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber, toShift));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(toShift);
@@ -380,7 +381,7 @@ public class BitvectorGenerator {
 
   protected static void logBVShiftLeft(
       BitvectorFormula result, BitvectorFormula pNumber, BitvectorFormula toShift) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber, toShift));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber, toShift));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(toShift);
@@ -393,7 +394,7 @@ public class BitvectorGenerator {
 
   protected static void logConcat(
       BitvectorFormula result, BitvectorFormula pNumber, BitvectorFormula append) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber, append));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber, append));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(append);
@@ -406,7 +407,7 @@ public class BitvectorGenerator {
 
   protected static void logExtract(
       BitvectorFormula result, BitvectorFormula pNumber, int pMsb, int pLsb) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(String.valueOf(pMsb));
@@ -426,7 +427,7 @@ public class BitvectorGenerator {
 
   protected static void logUExtend(
       BitvectorFormula result, BitvectorFormula pNumber, int pExtensionBits) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(String.valueOf(pExtensionBits));
@@ -439,7 +440,7 @@ public class BitvectorGenerator {
 
   protected static void logSExtend(
       BitvectorFormula result, BitvectorFormula pNumber, int pExtensionBits) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pNumber));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pNumber));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pNumber);
     inputParams.add(String.valueOf(pExtensionBits));
