@@ -8,6 +8,7 @@
 
 package org.sosy_lab.java_smt.basicimpl;
 
+import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -19,7 +20,7 @@ public class BooleanGenerator {
   private BooleanGenerator() {}
 
   protected static void logMakeVariable(Object result, String pVar) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pVar));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pVar));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pVar);
     Function<List<Object>, String> functionToString =
@@ -29,7 +30,7 @@ public class BooleanGenerator {
   }
 
   protected static void logMakeTrue(Object result, String pVar) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pVar));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pVar));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pVar);
     Function<List<Object>, String> functionToString =
@@ -39,7 +40,7 @@ public class BooleanGenerator {
   }
 
   protected static void logMakeFalse(Object result, String pVar) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pVar));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pVar));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pVar);
     Function<List<Object>, String> functionToString =
@@ -49,7 +50,7 @@ public class BooleanGenerator {
   }
 
   protected static void logNot(Object result, BooleanFormula pBits) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits);
     Function<List<Object>, String> functionToString =
@@ -59,7 +60,7 @@ public class BooleanGenerator {
   }
 
   protected static void logOr(Object result, BooleanFormula pBits1, BooleanFormula pBits2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, pBits2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, pBits2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(pBits2);
@@ -71,7 +72,7 @@ public class BooleanGenerator {
   }
 
   protected static void logOr(Object result, Collection<BooleanFormula> pBits1) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1));
     List<Object> inputParams = new ArrayList<>(pBits1);
     Function<List<Object>, String> functionToString =
         inPlaceInputParams -> {
@@ -90,7 +91,7 @@ public class BooleanGenerator {
   }
 
   protected static void logAnd(Object result, BooleanFormula pBits1, BooleanFormula pBits2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, pBits2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, pBits2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(pBits2);
@@ -102,7 +103,7 @@ public class BooleanGenerator {
   }
 
   protected static void logAnd(Object result, Collection<BooleanFormula> pBits1) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1));
     List<Object> inputParams = new ArrayList<>(pBits1);
     Function<List<Object>, String> functionToString =
         inPlaceInputParams -> {
@@ -122,7 +123,7 @@ public class BooleanGenerator {
   }
 
   protected static void logXor(Object result, BooleanFormula pBits1, BooleanFormula pBits2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, pBits2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, pBits2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(pBits2);
@@ -135,7 +136,7 @@ public class BooleanGenerator {
 
   protected static void logEquivalence(
       Object result, BooleanFormula pBits1, BooleanFormula pBits2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, pBits2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, pBits2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(pBits2);
@@ -148,7 +149,7 @@ public class BooleanGenerator {
 
   protected static void logImplication(
       Object result, BooleanFormula pBits1, BooleanFormula pBits2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, pBits2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, pBits2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(pBits2);
@@ -160,7 +161,7 @@ public class BooleanGenerator {
   }
 
   protected static void logIfThenElse(Object result, BooleanFormula pBits1, Object f1, Object f2) {
-    Generator.throwExceptionWhenParameterIsNull(List.of(result, pBits1, f1, f2));
+    Generator.throwExceptionWhenParameterIsNull(ImmutableList.of(result, pBits1, f1, f2));
     List<Object> inputParams = new ArrayList<>();
     inputParams.add(pBits1);
     inputParams.add(f1);
