@@ -9,6 +9,7 @@
 package org.sosy_lab.java_smt.basicimpl;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableList;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.IOException;
 import java.io.Writer;
@@ -77,7 +78,7 @@ public class Generator {
   }
 
   protected static void writeToFile(String line, String fileName) throws IOException {
-    throwExceptionWhenParameterIsNull(List.of(line, fileName));
+    throwExceptionWhenParameterIsNull(ImmutableList.of(line, fileName));
     try {
       try (Writer fileWriter =
           Files.newBufferedWriter(Path.of(fileName), Charset.defaultCharset())) {
@@ -104,7 +105,7 @@ public class Generator {
    * @return SMT-LIB2 String that is equivalent to Formula or String input
    */
   protected static String evaluateRecursive(Object constraint) {
-    throwExceptionWhenParameterIsNull(List.of(constraint));
+    throwExceptionWhenParameterIsNull(ImmutableList.of(constraint));
     if (constraint instanceof String) {
       // Constants
       return (String) constraint;
@@ -137,7 +138,7 @@ public class Generator {
    */
   // TODO: automatically call on toString() of formulas
   public static void assembleConstraint(BooleanFormula constraint) {
-    throwExceptionWhenParameterIsNull(List.of(constraint));
+    throwExceptionWhenParameterIsNull(ImmutableList.of(constraint));
     if (!isLoggingEnabled()) {
       throw new GeneratorException("Logging is not enabled");
     }
